* commit f14cd1408c51884b92c4b9d0738fa467964a1460
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Wed Mar 26 16:29:57 2014 -0400
| 
|     cleandist-custom.sh now does not delete the configure file, so others can work on the code and not have to worry about having the latest edition of GNU Autotools.
|  
* commit e397300f875f6a386d71e8d010f16c2b04494b4e
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Wed Mar 26 15:51:43 2014 -0400
| 
|     added more files to gitignore
|  
* commit 733ab6fd75b60bfdae3e70843b5daba32e7051e4
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Wed Mar 26 15:42:23 2014 -0400
| 
|     added .gitignore
|  
* commit 4c467c13c309f68d35c9f499775fa774ae05869d
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Wed Mar 26 15:38:48 2014 -0400
| 
|     added get_large_files.sh and cleaned repository.
|  
* commit f21bdf9e9bbdbe39e18f8ef667d2141da676a4ff
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Wed Mar 26 10:40:03 2014 -0400
| 
|     Updated documentation. Fortran 95 compliant. Works on gfortran v4.3, g95 v0.93.
|  
* commit f0a90269dbd000e2461a06643c65744d739ea2e8
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Tue Mar 25 23:46:45 2014 -0400
| 
|     Should now be compatible with F95. Moved data files to a folder that will not be distributed with releases
|  
* commit 63275034b2d4b1b1518ccfb929e0989cf64a90df
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Tue Mar 25 18:10:04 2014 -0400
| 
|     more data files added, changed options.f95, will edit further on metis to make compatible with earlier versions of gfortran.
|  
* commit c174566f293c80c2b565927abf9eb38f62f1ce13
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Sun Mar 23 09:54:30 2014 -0500
| 